<resources>
    <string name="app_name">HomeWork</string>
    <string name="btn_taskOne">Task 1</string>
    <string name="btn_taskTwo">Task 2</string>
    <string name="btn_taskThree">Task 3</string>
    <string name="btn_taskFour">Task 4</string>
    <string name="btn_taskFive">Task 5</string>
    <string name="btn_taskSix">Task 6</string>
    <string name="btn_taskSeven">Task 7</string>
    <string name="btn_result">=</string>
    <string name="et_rating">Введите рейтинг</string>
    <string name="btn_rating">Узнать рейтинг</string>
    <string name="tv_envelopFirst">Первый конверт</string>
    <string name="tv_envelopSecond">Второй конверт</string>
    <string name="ed_a">Сторона "а"</string>
    <string name="ed_b">Сторона "b"</string>
    <string name="ed_c">Сторона "c"</string>
    <string name="ed_d">Сторона "d"</string>
    <string name="btn_check">Можно ли вложить один конверт в другой?</string>
    <string name="et_number">Введите число</string>
    <string name="btn_res">Вычислить факториал</string>
    <string name="label">Label</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="authorization">Authorization</string>
    <string name="errorAutho">Введите логин и/или пароль</string>
    <string name="mediaplayer">MediaPlayer</string>
    <string name="some_text">some text</string>
    <string name="start_anim">start anim</string>
    <string name="stop_anim">stop anim text</string>
    <string name="btnLesson24">lesson 24</string>
    <string name="btnLesson25">lesson 25</string>
    <string name="btnLesson26">lesson 26</string>
    <string name="open_patients">Open patients</string>
    <string name="empty_not_saved">empty</string>
    <string name="patients">Patients</string>
    <string name="save">save</string>
    <string name="student_name">Student name</string>
    <string name="student_mark">mark</string>
    <string name="btnLesson23">lesson 23</string>

</resources>