<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TaskFourActivity">

    <TextView
        android:id="@+id/tv_envelopFirst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/tv_envelopFirst"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ed_a"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="45dp"
        android:ems="10"
        android:hint="@string/ed_a"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_envelopFirst"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ed_b"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_marginTop="45dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/ed_b"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toEndOf="@+id/ed_a"
        app:layout_constraintTop_toBottomOf="@+id/tv_envelopFirst"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_envelopSecond"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="220dp"
        android:text="@string/tv_envelopSecond"
        android:textSize="18dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ed_c"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="44dp"
        android:ems="10"
        android:hint="@string/ed_c"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_envelopSecond"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/ed_d"
        android:layout_width="119dp"
        android:layout_height="46dp"
        android:layout_marginTop="44dp"
        android:layout_marginEnd="56dp"
        android:ems="10"
        android:hint="@string/ed_d"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.867"
        app:layout_constraintStart_toEndOf="@+id/ed_c"
        app:layout_constraintTop_toBottomOf="@+id/tv_envelopSecond"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/btn_check"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/btn_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_d"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tv_check"
        android:layout_width="413dp"
        android:layout_height="107dp"
        android:layout_marginTop="52dp"
        android:text=""
        android:textSize="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_check"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>